--- a/style.css
+++ b/style.css
@@ -17,13 +17,24 @@ body {
     overflow: hidden;
 }
 
-.pupil {
-    width: 30px;
-    height: 30px;
-    background: black;
+.iris {
+    width: 60px;
+    height: 60px;
+    background: #4b2e1f; /* ciemno brązowa tęczówka */
     border-radius: 50%;
     position: absolute;
-    top: 35px;
-    left: 35px;
+    top: 20px;
+    left: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pupil {
+    width: 20px;
+    height: 20px;
+    background: black;
+    border-radius: 50%;
+    position: relative;
     transition: top 0.05s, left 0.05s;
 }
